## Copyright 2018 The Chromium Authors. All rights reserved.
## Use of this source code is governed by a BSD-style license that can be
## found in the LICENSE file.

licenses(["notice"])  # BSD 3-Clause

load("//:defines.bzl", "DEFINES")

cc_library(
    name = "test_utils",
    testonly = True,
    srcs = [
        "compiler-test-utils.h",
        "node-test-utils.cc",
        "node-test-utils.h",
    ],
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
        "-Iexternal/org_chromium_v8/include",
    ],
    defines = DEFINES,
    visibility = ["//visibility:public"],
    deps = [
        "//:v8_for_testing",
        "//testing/gmock/include/gmock",
        "//testing/gtest/include/gtest",
    ],
)

cc_test(
    name = "compiler",
    timeout = "eternal",
    srcs = [
        "branch-elimination-unittest.cc",
        "bytecode-analysis-unittest.cc",
        "checkpoint-elimination-unittest.cc",
        "code-assembler-unittest.cc",
        "code-assembler-unittest.h",
        "common-operator-reducer-unittest.cc",
        "common-operator-unittest.cc",
        "constant-folding-reducer-unittest.cc",
        "control-equivalence-unittest.cc",
        "control-flow-optimizer-unittest.cc",
        "dead-code-elimination-unittest.cc",
        "diamond-unittest.cc",
        "effect-control-linearizer-unittest.cc",
        "graph-reducer-unittest.cc",
        "graph-reducer-unittest.h",
        "graph-trimmer-unittest.cc",
        "graph-unittest.cc",
        "graph-unittest.h",
        "instruction-selector-unittest.cc",
        "instruction-selector-unittest.h",
        "instruction-sequence-unittest.cc",
        "instruction-sequence-unittest.h",
        "instruction-unittest.cc",
        "int64-lowering-unittest.cc",
        "js-call-reducer-unittest.cc",
        "js-create-lowering-unittest.cc",
        "js-intrinsic-lowering-unittest.cc",
        "js-operator-unittest.cc",
        "js-typed-lowering-unittest.cc",
        "linkage-tail-call-unittest.cc",
        "live-range-builder.h",
        "load-elimination-unittest.cc",
        "loop-peeling-unittest.cc",
        "machine-operator-reducer-unittest.cc",
        "machine-operator-unittest.cc",
        "node-cache-unittest.cc",
        "node-matchers-unittest.cc",
        "node-properties-unittest.cc",
        "node-unittest.cc",
        "opcodes-unittest.cc",
        "persistent-unittest.cc",
        "regalloc/live-range-unittest.cc",
        "regalloc/move-optimizer-unittest.cc",
        "regalloc/register-allocator-unittest.cc",
        "schedule-unittest.cc",
        "scheduler-rpo-unittest.cc",
        "scheduler-unittest.cc",
        "simplified-lowering-unittest.cc",
        "simplified-operator-reducer-unittest.cc",
        "simplified-operator-unittest.cc",
        "state-values-utils-unittest.cc",
        "typed-optimization-unittest.cc",
        # "typer-unittest.cc",
        "value-numbering-reducer-unittest.cc",
        "zone-stats-unittest.cc",
    ],
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
        "-Iexternal/org_chromium_v8/include",
    ],
    defines = DEFINES,
    shard_count = 50,
    deps = [
        ":test_utils",
        "//:v8_for_testing",
        "//:v8_libbase",
        "//:v8_libplatform",
        "//test/unittests:test_utils",
        "//test/unittests/interpreter:test_utils",
        "//testing:gmock-support",
        "//testing:gtest-support",
        "//testing/gtest/include/gtest",
    ],
)
