## Copyright 2018 The Chromium Authors. All rights reserved.
## Use of this source code is governed by a BSD-style license that can be
## found in the LICENSE file.

licenses(["notice"])  # BSD 3-Clause

load("//:defines.bzl", "DEFINES")

cc_library(
    name = "test_utils",
    testonly = True,
    srcs = [
        "bytecode-utils.h",
    ],
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
        "-Iexternal/org_chromium_v8/include",
    ],
    defines = DEFINES,
    visibility = ["//visibility:public"],
    deps = [
        "//:v8_for_testing",
    ],
)

cc_test(
    name = "interpreter",
    timeout = "long",
    srcs = [
        "bytecode-array-builder-unittest.cc",
        "bytecode-array-iterator-unittest.cc",
        "bytecode-array-random-iterator-unittest.cc",
        "bytecode-array-writer-unittest.cc",
        "bytecode-decoder-unittest.cc",
        "bytecode-node-unittest.cc",
        "bytecode-operands-unittest.cc",
        "bytecode-register-allocator-unittest.cc",
        "bytecode-register-optimizer-unittest.cc",
        "bytecode-source-info-unittest.cc",
        "bytecodes-unittest.cc",
        "constant-array-builder-unittest.cc",
        "interpreter-assembler-unittest.cc",
        "interpreter-assembler-unittest.h",
    ],
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
        "-Iexternal/org_chromium_v8/include",
    ],
    defines = DEFINES,
    shard_count = 15,
    deps = [
        ":test_utils",
        "//:v8_for_testing",
        "//:v8_libbase",
        "//:v8_libplatform",
        "//test/unittests:test_utils",
        "//test/unittests/compiler:test_utils",
        "//testing:gmock-support",
        "//testing:gtest-support",
        "//testing/gtest/include/gtest",
    ],
)
