## Copyright 2018 The Chromium Authors. All rights reserved.
## Use of this source code is governed by a BSD-style license that can be
## found in the LICENSE file.

licenses(["notice"])  # BSD 3-Clause

load("//:defines.bzl", "DEFINES")

cc_test(
    name = "wasm",
    timeout = "long",
    srcs = [
        # "control-transfer-unittest.cc",
        # "decoder-unittest.cc",
        # "function-body-decoder-unittest.cc",
        "leb-helper-unittest.cc",
        # "loop-assignment-analysis-unittest.cc",
        # "module-decoder-unittest.cc",
        # "streaming-decoder-unittest.cc",
        "trap-handler-unittest.cc",
        "wasm-code-manager-unittest.cc",
        # "wasm-macro-gen-unittest.cc",
        # "wasm-module-builder-unittest.cc",
        "wasm-opcodes-unittest.cc",
    ],
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
        "-Iexternal/org_chromium_v8/include",
    ],
    defines = DEFINES,
    deps = [
        "//:v8_libbase",
        "//:v8_libplatform",
        "//test/unittests:test_utils",
        "//testing:gmock-support",
        "//testing:gtest-support",
        "//testing/gtest/include/gtest",
    ],
)
